@startuml Class Diagram

skinparam linetype ortho

skinparam package {
    BackgroundColor #DDDDDD
}

rectangle "Service Layer" as service_layer #EEEBDC {
    ' Main service
    package service {
        interface SearchService {
            {abstract} +searchPlaces()
        }
    }

    package serviceImpl {
        interface PathBuilder {
            {abstract} +withBasePath()
            {abstract} +withQuery()
            {abstract} +withParameter()
            {abstract} +build()
            {abstract} +reset()
        }
        class MapBoxPlacesPathBuilder

        class SearchServiceProxyImpl {
            +searchPlaces()
        }

        MapBoxPlacesPathBuilder --|> PathBuilder
        SearchServiceProxyImpl --> PathBuilder
   }

    ' Relations
    serviceImpl::SearchServiceProxyImpl --|> service::SearchService

    ' Alignment
    service -[hidden]down- serviceImpl



}

rectangle "Utils" as utils_layer #EEEBDC {
    ' HTTP Client
    package httpClient {
        interface HttpClient {
            {abstract} +sendRequest()
        }


    }

    package httpClientImpl {
        class HttpClientImpl {
            +sendRequest()
        }

    }

    ' Relations
    httpClientImpl::HttpClientImpl --|> httpClient::HttpClient

    ' Alignment
    httpClient -[hidden]down- httpClientImpl
}


' External dependencies
rectangle "External" as external_layer #EEEBDC{
    package drogon {
        interface HttpController
        interface DrogonHttpClient as "HttpClient"
    }
}


' Relations
SearchController --|> HttpController
SearchController o--> SearchService

SearchServiceProxyImpl --> HttpClient

HttpClientImpl *-- DrogonHttpClient


' Alignment
service_layer -[hidden]down- external_layer
utils_layer -[hidden]right- external_layer


@enduml